[package]
name = "infector"
version = "0.1.0"
authors = ["Justin Perez <justinmp@vt.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced-x86 = "1.10"
goblin = "0.3"
termcolor = "1.1"
rand = "0.8"
common = {path = "../common"}
