[package]
name = "runtime"
version = "0.1.0"
authors = ["Justin Perez <justinmp@vt.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.20"
aesni = "0.10"
bincode = "1.3"
block-modes = "0.7"
snap = "1.0"
common = { path = "../common" }
procfs = "0.9"

# optimize release for small builds.
[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = 'abort'
